[gd_scene load_steps=4 format=2]

[ext_resource path="res://User Interfaces/StartMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/arcadeBackground.png" type="Texture" id=2]
[ext_resource path="res://Assets/Music/Project 37b.mp3" type="AudioStream" id=3]

[node name="StartMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ArcadeBackground" type="Sprite" parent="."]
position = Vector2( 512, 302.375 )
scale = Vector2( 1.50588, 0.60475 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -108.0
margin_right = 91.0
margin_bottom = 43.0

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 267.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="ShopButton" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 267.0
margin_bottom = 44.0
text = "Shop"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 267.0
margin_bottom = 68.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
